test/__snapshots__/loader.test.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loader should throw error on invalid css syntax: errors 1`] = `
Array [
  "ModuleBuildError: Module build failed (from \`replaced original path\`):
CssSyntaxError

(2:3) Unknown word

  1 | .some {
> 2 |   invalid css;
    |   ^
  3 | }
  4 | 
",
]
`;

exports[`loader should throw error on invalid css syntax: warnings 1`] = `Array []`;
